--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">CarConnect</string>
+    <string-array name="drive_options">
+        <item>Yes</item>
+        <item>No</item>
+    </string-array>
+
+    <string-array name="gender_options">
+        <item>Male</item>
+        <item>Female</item>
+        <item>N/A</item>
+    </string-array>
 </resources>
